--- a/Project/Project Code.ipynb
+++ b/Project/Project Code.ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#reading file\n",
@@ -44,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def estimate_emission_param(data):\n",
@@ -97,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -149,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def single_sentiment_analysis(labels, param, word):\n",
-    "    mle = (word, \"O\") #assuming label O for undiscovered word\n",
+    "    mle = (word, \"undis\") #assuming label O for undiscovered word\n",
     "    mle_value = 0\n",
     "    for l in labels:\n",
     "        if (word, l) in param:\n",
@@ -172,6 +168,9 @@
     "    with open(input_filename, \"r\") as inputfile:\n",
     "        with open(output_filename, \"w\") as outputfile:\n",
     "            for line in inputfile:\n",
+    "                if line ==\"\\n\":\n",
+    "                    outputfile.write(\"\\n\")\n",
+    "                    continue\n",
     "                if line.strip(\"\\n\") in words:\n",
     "                    pred = single_sentiment_analysis(labels, param, line.strip(\"\\n\"))\n",
     "                    outputfile.write(\" \".join(pred)+\"\\n\")\n",
@@ -184,17 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CN part 2 done in 0.159767s\n",
-      "EN part 2 done in 0.65243s\n",
-      "SG part 2 done in 0.294315s\n",
-      "FR part 2 done in 0.71494s\n"
+      "CN part 2 done in 0.139201s\n",
+      "EN part 2 done in 0.69442s\n",
+      "SG part 2 done in 0.291523s\n",
+      "FR part 2 done in 0.75163s\n"
      ]
     }
    ],
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -376,17 +375,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CN part 3 done in 0.649917s\n",
-      "EN part 3 done in 0.370221s\n",
-      "SG part 3 done in 2.240044s\n",
-      "FR part 3 done in 0.369564s\n"
+      "CN part 3 done in 0.650267s\n",
+      "EN part 3 done in 0.437108s\n",
+      "SG part 3 done in 2.270163s\n",
+      "FR part 3 done in 0.341745s\n"
      ]
     }
    ],
@@ -446,105 +445,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# alphas = {}\n",
-    "\n",
-    "def alpha_forward(tag, stage, word_sequence, alphas,\n",
-    "                  trans_param=trans_param,\n",
-    "                  labels=labels,\n",
-    "                  em_param=em_param):\n",
-    "    '''\n",
-    "    Forward algorithm\n",
-    "    '''\n",
-    "    if stage <= 1:\n",
-    "        if (\"START\", tag) in trans_param:\n",
-    "            score = trans_param[(\"START\", tag)]\n",
-    "        else:\n",
-    "            score = 0\n",
-    "        alphas[(tag, stage)] = score\n",
-    "        return score\n",
-    "    else:\n",
-    "        if (tag, stage) in alphas:\n",
-    "            return alphas[(tag, stage)]\n",
-    "        score = 0\n",
-    "        for t in labels:\n",
-    "            prev_score = alpha_forward(t, stage-1, word_sequence, alphas)\n",
-    "            if (t, tag) in trans_param:\n",
-    "                trans_prob = trans_param[(t, tag)]\n",
-    "            else:\n",
-    "                trans_prob = 0\n",
-    "            word = word_sequence[stage-2]\n",
-    "            if (word, t) in em_param:\n",
-    "                em_prob = em_param[(word, t)]\n",
-    "            else:\n",
-    "                em_prob = 0\n",
-    "            curr_score = prev_score*trans_prob*em_prob\n",
-    "            score += curr_score\n",
-    "        alphas[(tag, stage)] = score\n",
-    "        return score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# betas = {}\n",
-    "\n",
-    "def beta_back(tag, stage, word_sequence, betas,\n",
-    "                  trans_param=trans_param,\n",
-    "                  labels=labels,\n",
-    "                  em_param=em_param):\n",
-    "    '''\n",
-    "    Backward algorithm\n",
-    "    '''\n",
-    "    if stage <= 1:\n",
-    "        if (tag, \"STOP\") in trans_param:\n",
-    "            score = trans_param[(tag, \"STOP\")]\n",
-    "        else:\n",
-    "            score = 0\n",
-    "        betas[(tag, stage)] = score\n",
-    "        return score\n",
-    "    else:\n",
-    "        if (tag, stage) in betas:\n",
-    "            return betas[(tag, stage)]\n",
-    "        score = 0\n",
-    "        for t in labels:\n",
-    "            prev_score = beta_back(t, stage-1, word_sequence, betas)\n",
-    "            if (tag, t) in trans_param:\n",
-    "                trans_prob = trans_param[(tag, t)]\n",
-    "            else:\n",
-    "                trans_prob = 0\n",
-    "            word = word_sequence[stage-2]\n",
-    "            if (word, tag) in em_param:\n",
-    "                em_prob = em_param[(word, tag)]\n",
-    "            else:\n",
-    "                em_prob = 0\n",
-    "            curr_score = prev_score*trans_prob*em_prob\n",
-    "            score += curr_score\n",
-    "        betas[(tag, stage)] = score\n",
-    "        return score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EN part 4 done in 0.393760s\n",
-      "FR part 4 done in 0.329986s\n"
+      "EN part 4 done in 0.368582s\n",
+      "FR part 4 done in 0.324970s\n"
      ]
     }
    ],
@@ -557,7 +466,74 @@
     "    using max-marginal decoding algorithm\n",
     "    '''\n",
     "    alphas = {}\n",
+    "    def alpha_forward(tag, stage, word_sequence, alphas,\n",
+    "                      trans_param=trans_param,\n",
+    "                      labels=labels,\n",
+    "                      em_param=em_param):\n",
+    "        '''\n",
+    "        Forward algorithm\n",
+    "        '''\n",
+    "        if stage <= 1:\n",
+    "            if (\"START\", tag) in trans_param:\n",
+    "                score = trans_param[(\"START\", tag)]\n",
+    "            else:\n",
+    "                score = 0\n",
+    "            alphas[(tag, stage)] = score\n",
+    "            return score\n",
+    "        else:\n",
+    "            if (tag, stage) in alphas:\n",
+    "                return alphas[(tag, stage)]\n",
+    "            score = 0\n",
+    "            for t in labels:\n",
+    "                prev_score = alpha_forward(t, stage-1, word_sequence, alphas)\n",
+    "                if (t, tag) in trans_param:\n",
+    "                    trans_prob = trans_param[(t, tag)]\n",
+    "                else:\n",
+    "                    trans_prob = 0\n",
+    "                word = word_sequence[stage-2]\n",
+    "                if (word, t) in em_param:\n",
+    "                    em_prob = em_param[(word, t)]\n",
+    "                else:\n",
+    "                    em_prob = 0\n",
+    "                curr_score = prev_score*trans_prob*em_prob\n",
+    "                score += curr_score\n",
+    "            alphas[(tag, stage)] = score\n",
+    "            return score\n",
+    "        \n",
     "    betas = {}\n",
+    "    def beta_back(tag, stage, word_sequence, betas,\n",
+    "                      trans_param=trans_param,\n",
+    "                      labels=labels,\n",
+    "                      em_param=em_param):\n",
+    "        '''\n",
+    "        Backward algorithm\n",
+    "        '''\n",
+    "        if stage <= 1:\n",
+    "            if (tag, \"STOP\") in trans_param:\n",
+    "                score = trans_param[(tag, \"STOP\")]\n",
+    "            else:\n",
+    "                score = 0\n",
+    "            betas[(tag, stage)] = score\n",
+    "            return score\n",
+    "        else:\n",
+    "            if (tag, stage) in betas:\n",
+    "                return betas[(tag, stage)]\n",
+    "            score = 0\n",
+    "            for t in labels:\n",
+    "                prev_score = beta_back(t, stage-1, word_sequence, betas)\n",
+    "                if (tag, t) in trans_param:\n",
+    "                    trans_prob = trans_param[(tag, t)]\n",
+    "                else:\n",
+    "                    trans_prob = 0\n",
+    "                word = word_sequence[stage-2]\n",
+    "                if (word, tag) in em_param:\n",
+    "                    em_prob = em_param[(word, tag)]\n",
+    "                else:\n",
+    "                    em_prob = 0\n",
+    "                curr_score = prev_score*trans_prob*em_prob\n",
+    "                score += curr_score\n",
+    "            betas[(tag, stage)] = score\n",
+    "            return score\n",
     "    \n",
     "    tag_seqr = [\"STOP\"]\n",
     "    \n",
