added project report pdf?

--- a/Project/Project Code.ipynb
+++ b/Project/Project Code.ipynb
@@ -861,19 +861,7 @@
     "        elif id_tagsequence[i] == \"I\" and sm_tagsequence[i] == \"none\":\n",
     "            sm_tagsequence[i] = sm_tagsequence[i-1]\n",
     "            \n",
-    "    return id_tagsequence, sm_tagsequence\n",
-    "\n",
-    "# words, tags, id_emparam = estimate_emission_param(id_data)\n",
-    "# id_transparam = estimate_transition_parameter(id_data)\n",
-    "# swords, stags, sm_emparam = estimate_emission_param(sm_data)\n",
-    "# sm_emparam = {k:sm_emparam[k] for k in sm_emparam if k[1] != 'none'}\n",
-    "# sm_transparam = estimate_transition_parameter(sm_data)\n",
-    "# word_sequence = [\"we\", \"like\", \"the\", \"ambience\"]\n",
-    "# id_tagseq, sm_tagseq = predict_dualtag_sequence(word_sequence, words, tags, stags,\n",
-    "#                                                id_emparam, id_transparam,\n",
-    "#                                                sm_emparam, sm_data)\n",
-    "# print(id_tagseq)\n",
-    "# print(sm_tagseq)\n"
+    "    return id_tagsequence, sm_tagsequence\n"
    ]
   },
   {
@@ -1911,15 +1899,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EN test done in 0.507740s\n",
-      "FR test done in 0.471861s\n"
+      "EN test done in 0.529411s\n",
+      "FR test done in 0.485048s\n"
      ]
     }
    ],
@@ -1953,7 +1941,7 @@
     "                outfile.write(line)\n",
     "            outfile.write(\"\\n\")\n",
     "    \n",
-    "    merge_tag_layer(c+\"/test.split.out\", c+\"/test.out\")\n",
+    "    merge_tag_layer(c+\"/test.split.out\", c+\"/test.p5.out\")\n",
     "\n",
     "for c in [\"EN\", \"FR\"]:\n",
     "    start = datetime.now()\n",
@@ -1976,15 +1964,6 @@
     "    print(\"{} test done in {}.{}s\"\\\n",
     "          .format(c, delt.seconds, delt.microseconds))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
